feat: finish off client cli
